--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@eslint/js": "^9.32.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "sequelize-cli": "^6.6.3"
   },
   "scripts": {
     "start": "nodemon server.js",
