removed secret key

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ DB_PASSWORD=946763149
 DB_HOST=localhost
 JWT_SECRET=supersecret
 JWT_EXPIRES_IN=90d
+
+# Email Configuration (Gmail example)
+
+# Node Environment
+NODE_ENV=development
+
