created route for customer login

--- a/.env
+++ b/.env
@@ -7,6 +7,20 @@ JWT_SECRET=supersecret
 JWT_EXPIRES_IN=90d
 
 # Email Configuration (Gmail example)
+EMAIL_SERVICE=gmail
+EMAIL_USER=your.email@gmail.com
+EMAIL_PASSWORD=your_app_password
+EMAIL_FROM=noreply@yourbank.com
+
+# Twilio SMS Configuration
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_PHONE_NUMBER=+1234567890
+
+# OR Afghan SMS Gateway
+SMS_API_URL=https://api.afghansmsgateway.com/send
+SMS_API_KEY=your_afghan_sms_api_key
+SMS_SENDER_ID=YOURBANK
 
 # Node Environment
 NODE_ENV=development
