--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.14.2",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
+    "twilio": "^5.8.0",
     "validator": "^13.15.15"
   },
   "name": "exchange-money-api",
