--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "twilio": "^5.8.0",
-    "validator": "^13.15.15",
-    "whatsapp-web.js": "^1.33.0"
+    "validator": "^13.15.15"
   },
   "name": "exchange-money-api",
   "version": "1.0.0",
