--- a/.env
+++ b/.env
@@ -12,6 +12,10 @@ EMAIL_USER=your.email@gmail.com
 EMAIL_PASSWORD=your_app_password
 EMAIL_FROM=noreply@yourbank.com
 
+WHATSAPP_ACCESS_TOKEN=your_permanent_access_token_here
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id_here
+
+
 # Twilio SMS Configuration
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
