created some changes

--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ JWT_EXPIRES_IN=90d
 
 # Email Configuration (Gmail example)
 EMAIL_SERVICE=gmail
-EMAIL_USER=your.email@gmail.com
-EMAIL_PASSWORD=your_app_password
+EMAIL_USER=ehsanullahakbari53@gmail.com
+EMAIL_PASSWORD=qrbk sizc hxqt ysvd
 EMAIL_FROM=noreply@yourbank.com
 
 WHATSAPP_ACCESS_TOKEN=your_permanent_access_token_here
