create backup functionality

--- a/.env
+++ b/.env
@@ -6,6 +6,11 @@ DB_HOST=localhost
 JWT_SECRET=supersecret
 JWT_EXPIRES_IN=90d
 
+# Backup Configuration
+BACKUP_RETENTION_DAYS=30
+BACKUP_SCHEDULE_DAILY=0 2 * * *
+BACKUP_SCHEDULE_WEEKLY=0 3 * * 0
+
 # Email Configuration (Gmail example)
 EMAIL_SERVICE=gmail
 EMAIL_USER=ehsanullahakbari53@gmail.com
