--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.14.2",
+    "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
